comentarios finales sobre nuestro modelo y resultados

--- a/price_prediction.ipynb
+++ b/price_prediction.ipynb
@@ -23,7 +23,7 @@
         },
         {
             "cell_type": "code",
-            "execution_count": 14,
+            "execution_count": null,
             "id": "imports",
             "metadata": {},
             "outputs": [],
@@ -65,7 +65,7 @@
         },
         {
             "cell_type": "code",
-            "execution_count": 15,
+            "execution_count": null,
             "id": "load_data_code",
             "metadata": {},
             "outputs": [
@@ -300,7 +300,7 @@
         },
         {
             "cell_type": "code",
-            "execution_count": 16,
+            "execution_count": null,
             "id": "nan_analysis_code",
             "metadata": {},
             "outputs": [
@@ -360,7 +360,7 @@
         },
         {
             "cell_type": "code",
-            "execution_count": 17,
+            "execution_count": null,
             "id": "cleaning_code",
             "metadata": {},
             "outputs": [
@@ -404,7 +404,7 @@
         },
         {
             "cell_type": "code",
-            "execution_count": 18,
+            "execution_count": null,
             "id": "target_dist_code",
             "metadata": {},
             "outputs": [
@@ -429,7 +429,12 @@
                 "plt.xlabel(\"Valor (Milions d'Euros)\")\n",
                 "plt.ylabel(\"Freqüència\")\n",
                 "plt.xlim(0, 100) # Limitem l'eix X per veure millor la majoria\n",
-                "plt.show()"
+                "plt.show()\n",
+                "\n",
+                "\n",
+                "#veiem que en el nostre dataset la majoria de bpreus de jugadors estan per sota dels 20 milions d'euros, amb uns pocs outliers molt cars\n",
+                "#Aquests outliers poden afectar negativament el rendiment dels models de regressió, ja que poden distorsionar les prediccions i augmentar els errors.\n",
+                "#Per tant, és important considerar tècniques per gestionar aquests outliers, com ara l'ús de models robustos o la transformació de les dades."
             ]
         },
         {
@@ -443,7 +448,7 @@
         },
         {
             "cell_type": "code",
-            "execution_count": 19,
+            "execution_count": null,
             "id": "corr_code",
             "metadata": {},
             "outputs": [
@@ -467,7 +472,9 @@
                 "correlation_matrix = df[corr_cols].corr()\n",
                 "sns.heatmap(correlation_matrix, annot=True, cmap='coolwarm', fmt=\".2f\", linewidths=0.5)\n",
                 "plt.title(\"Matriu de Correlació (Variables Clau)\")\n",
-                "plt.show()"
+                "plt.show()\n",
+                "\n",
+                "#analitzem quines les variables que tenen més correlació amb la nostre variable objectiu"
             ]
         },
         {
@@ -481,7 +488,7 @@
         },
         {
             "cell_type": "code",
-            "execution_count": 20,
+            "execution_count": null,
             "id": "cat_eda_code",
             "metadata": {},
             "outputs": [
@@ -524,7 +531,8 @@
                 "sns.boxplot(x='nationality', y='value_million', data=df[df['nationality'].isin(top_nations)])\n",
                 "plt.title(\"Distribució del Valor per Nacionalitat (Top 10 països)\")\n",
                 "plt.ylim(0, 60)\n",
-                "plt.show()"
+                "plt.show()\n",
+                "\n"
             ]
         },
         {
@@ -538,7 +546,7 @@
         },
         {
             "cell_type": "code",
-            "execution_count": 21,
+            "execution_count": null,
             "id": "bivar_eda_code",
             "metadata": {},
             "outputs": [
@@ -581,7 +589,17 @@
                 "plt.title(\"Relació entre Rating General, Valor i Edat\")\n",
                 "plt.xlabel(\"Overall Rating\")\n",
                 "plt.ylabel(\"Valor (M€)\")\n",
-                "plt.show()"
+                "plt.show()\n",
+                "\n",
+                "\n",
+                "#Amb el primer gràfic podem dir que la edat òptima per tenir un alt valor de mercat està entre els 24 i 28 anys.\n",
+                "#Després d'aquesta edat, el valor mitjà comença a disminuir progressivament\n",
+                "\n",
+                "\n",
+                "\n",
+                "#A mesura que augmenta el rating general, el valor de mercat creix de manera no lineal,\n",
+                "#  amb un augment molt més pronunciat a partir de ratings alts (80+).\n",
+                "#És a dir, cada punt extra de rating val molt més quan el jugador ja és bo."
             ]
         },
         {
@@ -595,7 +613,7 @@
         },
         {
             "cell_type": "code",
-            "execution_count": 22,
+            "execution_count": null,
             "id": "radar_code",
             "metadata": {},
             "outputs": [
@@ -649,7 +667,9 @@
                 "attributes = ['crossing', 'finishing', 'dribbling', 'ball_control', 'stamina', 'vision']\n",
                 "\n",
                 "print(f\"Visualitzant perfil de: {top_player.get('name', 'Top Player')}\")\n",
-                "plot_radar_chart(df.loc[[df['value_euro'].idxmax()]], attributes, \"Perfil del Jugador Més Valuós\")"
+                "plot_radar_chart(df.loc[[df['value_euro'].idxmax()]], attributes, \"Perfil del Jugador Més Valuós\")\n",
+                "\n",
+                "#perfil del millor jugador"
             ]
         },
         {
@@ -673,7 +693,7 @@
         },
         {
             "cell_type": "code",
-            "execution_count": 23,
+            "execution_count": null,
             "id": "positions_code",
             "metadata": {},
             "outputs": [
@@ -699,7 +719,9 @@
                 "df['primary_position'] = df['positions'].apply(lambda x: x.split(',')[0] if pd.notna(x) else 'Unknown')\n",
                 "\n",
                 "print(\"Exemple de noves característiques de posició:\")\n",
-                "print(df[['positions', 'primary_position', 'position_count']].head())"
+                "print(df[['positions', 'primary_position', 'position_count']].head())\n",
+                "\n",
+                "#posem el nombre de posicions diferents que pot jugar cada jugador i la seva posició principal\n"
             ]
         },
         {
@@ -713,7 +735,7 @@
         },
         {
             "cell_type": "code",
-            "execution_count": 24,
+            "execution_count": null,
             "id": "prep_code",
             "metadata": {},
             "outputs": [
@@ -742,7 +764,10 @@
                 "cat_features = df_model.select_dtypes(include=['object']).columns.tolist()\n",
                 "\n",
                 "print(f\"Variables Numèriques: {len(num_features)}\")\n",
-                "print(f\"Variables Categòriques: {len(cat_features)}\")"
+                "print(f\"Variables Categòriques: {len(cat_features)}\")\n",
+                "\n",
+                "#Variables Numèriques: 38\n",
+                "#Variables Categòriques: 4\n"
             ]
         },
         {
@@ -759,7 +784,7 @@
         },
         {
             "cell_type": "code",
-            "execution_count": 25,
+            "execution_count": null,
             "id": "pipeline_code",
             "metadata": {},
             "outputs": [
@@ -793,7 +818,9 @@
                 "y = df[target]\n",
                 "X_train, X_test, y_train, y_test = train_test_split(X, y, test_size=0.2, random_state=42)\n",
                 "\n",
-                "print(f\"Train Shape: {X_train.shape}, Test Shape: {X_test.shape}\")"
+                "print(f\"Train Shape: {X_train.shape}, Test Shape: {X_test.shape}\")\n",
+                "\n",
+                "#Train Shape: (14363, 42), Test Shape: (3591, 42) aquestes son les mesures de les dimensions del nostre conjunt de dades després de la divisió en entrenament i prova."
             ]
         },
         {
@@ -811,7 +838,7 @@
         },
         {
             "cell_type": "code",
-            "execution_count": 26,
+            "execution_count": null,
             "id": "modeling_code",
             "metadata": {},
             "outputs": [
@@ -929,7 +956,10 @@
                 "    print(f\"{name} -> R2: {r2:.4f}, RMSE: €{rmse:,.0f}\")\n",
                 "\n",
                 "results_df = pd.DataFrame(results)\n",
-                "results_df.sort_values(by=\"R2\", ascending=False)"
+                "results_df.sort_values(by=\"R2\", ascending=False)\n",
+                "\n",
+                "#XGBoost és el model més precís amb diferència. Explica un 97.5% de la variabilitat del preu i aconsegueix els errors més baixos.\n",
+                "#La seva capacitat per optimitzar el gradient boosting i gestionar bé outliers i no-linearitats el fa el més adequat per aquest tipus de problema."
             ]
         },
         {
@@ -943,7 +973,7 @@
         },
         {
             "cell_type": "code",
-            "execution_count": 27,
+            "execution_count": null,
             "id": "tuning_code",
             "metadata": {},
             "outputs": [
@@ -999,7 +1029,7 @@
         },
         {
             "cell_type": "code",
-            "execution_count": 28,
+            "execution_count": null,
             "id": "eval_plots_code",
             "metadata": {},
             "outputs": [
@@ -1056,7 +1086,7 @@
         },
         {
             "cell_type": "code",
-            "execution_count": 29,
+            "execution_count": null,
             "id": "shap_code",
             "metadata": {},
             "outputs": [
@@ -1090,7 +1120,9 @@
                 "plt.figure(figsize=(12, 10))\n",
                 "plt.title(\"Impacte de les Variables en el Valor (SHAP)\")\n",
                 "shap.summary_plot(shap_values, X_test_processed[:500], feature_names=feature_names, show=False)\n",
-                "plt.show()"
+                "plt.show()\n",
+                "\n",
+                "#aixo el que va es dir-nos quant contribueix cada variable a la predicció"
             ]
         },
         {
@@ -1104,9 +1136,7 @@
                 "1.  Netejar i preparar un dataset complex de jugadors FIFA.\n",
                 "2.  Crear noves variables útils com `primary_position`.\n",
                 "3.  Entrenar un model XGBoost capaç de predir el valor de mercat amb alta precisió (R² > 0.95).\n",
-                "4.  Identificar que variables com `overall_rating`, `potential` i `age` són determinants per al valor.\n",
-                "\n",
-                "Aquest model està llest per ser utilitzat com a eina de suport a la decisió."
+                "4.  Identificar que variables com `overall_rating`, `potential` i `age` són determinants per al valor.\n"
             ]
         }
     ],
