--- a/price_prediction.ipynb
+++ b/price_prediction.ipynb
@@ -36,7 +36,9 @@
                 "import shap\n",
                 "import warnings\n",
                 "from math import pi\n",
-                "\n",
+                "# pandas para manipulación de datos\n",
+                "# numpy para cálculos numéricos\n",
+                "# matplotlib y seaborn para visualización\n",
                 "from sklearn.model_selection import train_test_split, cross_val_score, GridSearchCV, learning_curve\n",
                 "from sklearn.preprocessing import OneHotEncoder, StandardScaler, LabelEncoder\n",
                 "from sklearn.impute import SimpleImputer, KNNImputer\n",
@@ -286,7 +288,9 @@
             "source": [
                 "df = pd.read_csv(\"fifa_players.csv\")\n",
                 "print(f\"Dimensions del Dataset: {df.shape}\")\n",
-                "df.head()"
+                "df.head()\n",
+                "# Carreguem el dataset original de jugadors de la FIFA\n",
+                "# Inclou estadístiques, característiques físiques i valor de mercat\n"
             ]
         },
         {
@@ -345,7 +349,9 @@
                 "plt.title(\"Percentatge de Valors Nuls per Columna\")\n",
                 "plt.xlabel(\"Percentatge (%)\")\n",
                 "plt.ylabel(\"Variables\")\n",
-                "plt.show()"
+                "plt.show()\n",
+                "# Calculem el percentatge de valors nuls per columna\n",
+                "# Això ens ajuda a decidir quines columnes eliminar o imputar\n"
             ]
         },
         {
@@ -380,7 +386,10 @@
                 "numeric_cols = df.select_dtypes(include=['int64', 'float64']).columns\n",
                 "df[numeric_cols] = df[numeric_cols].fillna(df[numeric_cols].mean())\n",
                 "\n",
-                "print(\"Columnes restants:\", df.columns.tolist())"
+                "print(\"Columnes restants:\", df.columns.tolist())\n",
+                "\n",
+                "# Eliminem columnes que no aporten informació útil al model\n",
+                "# Com ara noms i dates de naixement\n"
             ]
         },
         {
@@ -688,7 +697,7 @@
             "metadata": {},
             "source": [
                 "### 3.1 Tractament de la Posició (`positions`)\n",
-                "Molts jugadors tenen múltiples posicions (ex: \"CF,RW,ST\"). Això dificulta l'anàlisi. Com en el cas de les feines a Harry Potter, separarem la posició principal i comptarem quantes posicions pot jugar."
+                "Molts jugadors tenen múltiples posicions (ex: \"CF,RW,ST\"). Això dificulta l'anàlisi.\n"
             ]
         },
         {
@@ -1122,6 +1131,7 @@
                 "shap.summary_plot(shap_values, X_test_processed[:500], feature_names=feature_names, show=False)\n",
                 "plt.show()\n",
                 "\n",
+                "# Extreiem el model XGBoost del pipeline per calcular els valors SHAP\n",
                 "#aixo el que va es dir-nos quant contribueix cada variable a la predicció"
             ]
         },
